src/snapshots/templates__renderer__test__render_multiline.snap
---
source: src/renderer.rs
assertion_line: 306
expression: "{> with my_list as List(String)\n<ul>\n{% for entry in my_list %}\n    <li>{{ entry }}</li>\n{% endfor %}\n</ul>"

---
// DO NOT EDIT: Code generated by templates from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(my_list my_list: List(String)) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "<ul>
")
    let builder = list.fold(my_list, builder, fn(builder, entry) {
            let builder = string_builder.append(builder, "
    <li>")
    let builder = string_builder.append(builder, entry)
    let builder = string_builder.append(builder, "</li>
")

        builder
})
    let builder = string_builder.append(builder, "
</ul>")

    builder
}

pub fn render(my_list my_list: List(String)) -> String {
    string_builder.to_string(render_builder(my_list: my_list))
}

