src/snapshots/templates__renderer__test__render_pure_text.snap
---
source: src/renderer.rs
assertion_line: 204
expression: "Hello name, good to meet you"

---
// DO NOT EDIT: Code generated by templates from -test-

import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder() -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, "Hello name, good to meet you")

    builder
}

pub fn render() -> String {
    string_builder.to_string(render_builder())
}

