src/snapshots/templates__renderer__test__repeated_identifier_usage.snap
---
source: src/renderer.rs
assertion_line: 211
expression: "{> with name as String\n{{ name }} usage, {{ name }} usage"

---
import gleam/string_builder.{StringBuilder}
import gleam/list



pub fn render_builder(name name: String) -> StringBuilder {
    let builder = string_builder.from_string("")
    let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, " usage, ")
    let builder = string_builder.append(builder, name)
    let builder = string_builder.append(builder, " usage")

    builder
}

pub fn render(name name: String) -> String {
    string_builder.to_string(render_builder(name: name))
}

